--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,14 +2,13 @@ h1 {
     text-align: center;
     padding-top: 1%;
 }
-div {
+.main_box {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30%;
+    margin-top: 3%;
     background-color: aliceblue;
-}
-body {
-    background-color: rgb(46, 46, 46);
 }
 .box {
     margin-left: 6%;
@@ -17,12 +16,25 @@ body {
 }
 .mp {
     width: 5%;
+    min-width: 50px;
+    min-height: 50px;
     height: 5%;
     float: left;
     margin-left: 1%;
     margin-top: 1%;
 }
-#edit {
-    width: 60%;
-    height: 60%;
+body{
+    background-image: url(files/edit.gif);
+}
+footer {
+    position: fixed;
+    margin-left: 1%;
+    bottom: 0.5%;
+    padding: 0.5%;
+    background-color: rgba(94, 0, 0, 0.763);
+    color: aliceblue;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
