--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,13 +6,13 @@ h1 {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 30%;
+    margin-bottom: 25%;
     margin-top: 3%;
     background-color: aliceblue;
 }
 .box {
     margin-left: 6%;
-    padding-bottom: 1%;
+    padding-bottom: 2%;
 }
 .mp {
     width: 5%;
@@ -23,8 +23,13 @@ h1 {
     margin-left: 1%;
     margin-top: 1%;
 }
-body{
-    background-image: url(files/edit.gif);
+video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -100;
 }
 footer {
     position: fixed;
@@ -34,7 +39,7 @@ footer {
     background-color: rgba(94, 0, 0, 0.763);
     color: aliceblue;
 }
-img {
+img, audio {
     max-width: 100%;
     max-height: 100%;
 }
