--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,8 @@ h1 {
     padding-top: 1%;
 }
 .main_box {
-    width: 80%;
+    width: 90%;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 25%;
